tests/fixtures/errors/invalid_theme_unknown_name.puml
@startuml
!theme coffee
A -> B
@enduml
